2008-12-12  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/freeze/ccm-freeze.c (ccm_freeze_ping), (ccm_freeze_map):
	  - Use g_timeout_add_seconds instead g_timeout_add.
	  - Set send event has no user event
	* src/ccm-drawable.c (__ccm_drawable_resize):
	  - Resize geometry region instead query_geometry.
	* src/ccm-screen.c (ccm_screen_on_event):
	  - Don't compress property and client message event.
	* src/ccm-window.c (impl_ccm_window_move), (ccm_window_unmap):
	  - Offset also origin opaque region on move.
	  - Don't damage window on unmap not necessary.

2008-12-09  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/freeze/ccm-freeze.c (ccm_freeze_on_event):
	  - Don't compress ping event.

2008-12-08  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/decoration/ccm-decoration.c (ccm_decoration_init),
	(ccm_decoration_get_opacity), (ccm_decoration_create_mask):
	* plugins/decoration/ccm-decoration.schemas.in:
	  - Add gradiant decoration options.
	* plugins/freeze/ccm-freeze.c (ccm_freeze_ping), (ccm_freeze_map),
	(ccm_freeze_unmap), (ccm_freeze_window_iface_init):
	  - Remove screen plugin interface.
	* src/ccm-pixmap.h:
	  - Fix typo.
	* src/ccm-window.c (ccm_window_unmap):
	  - Damage window on unmap.

2008-12-02  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/decoration/ccm-decoration.c
	(ccm_decoration_window_paint), (ccm_decoration_window_iface_init):
	  - Disable mask if damage region doesn't concern decoration.

2008-12-01  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/freeze/ccm-freeze.c (ccm_freeze_finalize):
	  - Fix crash on freeze plugin unload.

2008-12-01  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/freeze/ccm-freeze.c (ccm_freeze_init),
	(ccm_freeze_finalize), (ccm_freeze_on_event), (ccm_freeze_get_pid),
	(ccm_freeze_ping), (ccm_freeze_load_options), (ccm_freeze_paint),
	(ccm_freeze_map), (ccm_freeze_unmap), (ccm_freeze_add_window):
	* plugins/freeze/ccm-freeze.h: