@@ -943,12 +943,11 @@ impl_ccm_window_move(CCMWindowPlugin* plugin, CCMWindow* self, int x, int y)
 		CCM_DRAWABLE_CLASS(ccm_window_parent_class)->move(CCM_DRAWABLE(self), 
 														  x, y);
 		if (self->priv->opaque)
-		{
 			ccm_region_offset(self->priv->opaque, 
 							  x - geometry.x, y - geometry.y);
+		if (self->priv->orig_opaque)
 			ccm_region_offset(self->priv->orig_opaque, 
 							  x - geometry.x, y - geometry.y);
-		}
 		if ((self->priv->is_viewable || self->priv->unmap_pending) &&
 			ccm_drawable_get_geometry_clipbox(CCM_DRAWABLE(self), &geometry))
 		{
@@ -977,6 +976,11 @@ impl_ccm_window_resize(CCMWindowPlugin* plugin, CCMWindow* self,
 		
 		CCM_DRAWABLE_CLASS(ccm_window_parent_class)->resize(CCM_DRAWABLE(self), 
 															width, height);
+		
+		if (self->priv->opaque)
+			ccm_region_offset(self->priv->opaque, width, height);
+		if (self->priv->orig_opaque)
+			ccm_region_offset(self->priv->orig_opaque, width, height);
 		
 		if (self->priv->hint_type != CCM_WINDOW_TYPE_DESKTOP &&
 			(ccm_drawable_get_geometry_clipbox(CCM_DRAWABLE(self), &geometry) &&
